tests/errors/other/test_tc_other_09_import_pc_not_found.pc
#import "./nonexistent.pc"
int main() {
    0;
}
